ci: Sync submodules

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -45,7 +45,7 @@ task:
       - rm -rf .repo/repo && git clone https://gerrit.googlesource.com/git-repo .repo/repo
       - sed -i 's|ssh://git@github.com|https://github.com|g' .repo/manifests/snippets/qassa.xml
 #      - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8 --fail-fast
-      - repoo sync -c -j8 --force-sync --no-clone-bundle --no-tags
+      - repoo sync -c -j8 --force-sync --no-clone-bundle --no-tags --fetch-submodules
       - sed -i 's| -u||g' vendor/qassa/config/branding.mk
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
 
