ci: Install git-lfs
* Missing for kernel toolchain repo

Signed-off-by: rhmd19801 <rhmd.19801@gmail.com>

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,6 +36,7 @@ task:
 
   Sync_script:
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Start sync Source"
+      - sudo apt update && sudo apt upgrade -y && sudo apt install -y git-lfs
       - mkdir -p ~/rom
       - cd ~/rom
       - sudo curl --create-dirs -L -o /usr/local/bin/repoo -O -L https://storage.googleapis.com/git-repo-downloads/repo
