--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -45,6 +45,8 @@ task:
 #      - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8 --fail-fast
       - repoo sync -c -j8 --force-sync --no-clone-bundle --no-tags
       - sed -i 's| -u||g' vendor/evolution/config/version.mk
+      - cd ~/rom/kernel/xiaomi/msm8953
+      - git submodule update --recursive --init
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
 
   Build_script:
