--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -40,11 +40,12 @@ task:
       - cd ~/rom
       - sudo curl --create-dirs -L -o /usr/local/bin/repoo -O -L https://storage.googleapis.com/git-repo-downloads/repo
       - sudo chmod a+rx /usr/local/bin/repoo
-      - repoo init -q --no-repo-verify --depth=1 -u https://github.com/Evolution-X/manifest.git -b tiramisu -g default,-mips,-darwin,-notdefault
-      - git clone --depth 1 https://github.com/IDN-Labs/local_manifest.git -b evox-13.0 .repo/local_manifests
+      - rm -rf .repo
+      - repoo init --depth=1 -u https://github.com/Evolution-X/manifest.git -b tiramisu -g default,-mips,-darwin,-notdefault
+      - git clone --depth=1 https://github.com/IDN-Labs/local_manifest.git -b evox-13.0 .repo/local_manifests
       - find .repo -name '*.lock' -delete
 #      - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8 --fail-fast
-      - repoo sync -c -j8 --force-sync --no-clone-bundle --no-tags
+      - repoo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
       - sed -i 's| -u||g' vendor/evolution/config/version.mk
       - cd ~/rom/kernel/xiaomi/msm8953
       - git submodule update --recursive --init
