--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -42,7 +42,7 @@ task:
       - sudo curl --create-dirs -L -o /usr/local/bin/repoo -O -L https://storage.googleapis.com/git-repo-downloads/repo
       - sudo chmod a+rx /usr/local/bin/repoo
       - repoo init -q --no-repo-verify --depth=1 -u https://github.com/xdCLO/xd_manifest.git -b eleven -g default,-mips,-darwin,-notdefault
-      - git clone --depth 1 https://github.com/IDN-Labs/local_manifest.git -b kasumi-ysl .repo/local_manifests
+      - git clone --depth 1 https://github.com/IDN-Labs/local_manifest.git -b kasumi-11 .repo/local_manifests
       - rm -rf .repo/repo && git clone https://gerrit.googlesource.com/git-repo .repo/repo
       - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - sed -i 's| -u||g' vendor/kasumi/config/common.mk
