--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -43,7 +43,7 @@ task:
       - sudo chmod a+rx /usr/local/bin/repoo
       - repoo init -q --no-repo-verify --depth=1 -u https://github.com/xdCLO/xd_manifest.git -b eleven -g default,-mips,-darwin,-notdefault
       - git clone --depth 1 https://github.com/IDN-Labs/local_manifest.git -b kasumi-11 .repo/local_manifests
-      - rm -rf .repo/repo && git clone https://gerrit.googlesource.com/git-repo .repo/repo
+#      - rm -rf .repo/repo && git clone https://gerrit.googlesource.com/git-repo .repo/repo
       - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - sed -i 's| -u||g' vendor/kasumi/config/common.mk
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
