--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -41,10 +41,13 @@ task:
       - cd ~/rom
       - sudo curl --create-dirs -L -o /usr/local/bin/repoo -O -L https://storage.googleapis.com/git-repo-downloads/repo
       - sudo chmod a+rx /usr/local/bin/repoo
-      - repoo init -q --no-repo-verify --depth=1 -u https://github.com/xdCLO/xd_manifest.git -b eleven -g default,-mips,-darwin,-notdefault
+      - repoo init -q --no-repo-verify --depth=1 -u https://github.com/ProjectKasumi/manifest.git -b kasumi-v1 --git-lfs -g default,-mips,-darwin,-notdefault
       - git clone --depth 1 https://github.com/IDN-Labs/local_manifest.git -b kasumi-11 .repo/local_manifests
 #      - rm -rf .repo/repo && git clone https://gerrit.googlesource.com/git-repo .repo/repo
-      - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
+#      - repoo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
+      - repoo sync build/make external/tuuru vendor/kasumi
+      - source build/envsetup.sh
+      - reposync auto
       - sed -i 's| -u||g' vendor/kasumi/config/common.mk
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
 
