--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -43,6 +43,7 @@ task:
       - sudo apt-get update && sudo apt-get install -y git-lfs && git lfs install
       - repo sync -c --force-sync --no-clone-bundle --no-tags -j8
       - sed -i 's| -u||g' vendor/evolution/config/version.mk
+      - cd prebuilts/clang/host/linux-x86/clang-r498229b && git lfs pull
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
 
   Build_script:
